# QuantSI

./: .gitignore  .readthedocs.yaml  README.md  __init__.py  pyproject.toml  rtd-requirements.txt  setup.py
.github/workflows/: publish.yaml  pytest-ubuntu.yaml
QuantSI/: __init__.py  allunits.py  conftest.py  constants.py  fundamentalunits.py
QuantSI/tests/: test_units.py
brian2units/: _version.py  fundamentalunits.py
brian2units/tests/: test_units.py
core/: __init__.py  base.py  core_preferences.py  functions.py  names.py  namespace.py  preferences.py  variables.py
devices/: device.py
docs_sphinx/: QuantSI.allunits.rst  QuantSI.constants.rst  QuantSI.fundamentalunits.rst  QuantSI.rst  QuantSI.stdunits.rst  QuantSI.tests.rst  QuantSI.tests.test_units.rst  brian2units.allunits.rst  brian2units.fundamentalunits.rst  brian2units.stdunits.rst  brian2units.tests.rst  conf.py  index.rst  modules.rst  unitSI.constants.rst  unitSI.fundamentalunits.rst  unitSI.rst  unitSI.stdunits.rst  unitSI.tests.rst  unitSI.tests.test_units.rst  unitSI.unitsafefunctions.rst
docs_sphinx/_build/doctrees/: brian2units.allunits.doctree  brian2units.constants.doctree  brian2units.doctree  brian2units.fundamentalunits.doctree  brian2units.stdunits.doctree  brian2units.tests.doctree  brian2units.tests.test_units.doctree  brian2units.unitsafefunctions.doctree  environment.pickle  index.doctree  modules.doctree  (+8 more)
docs_sphinx/developer/: units.rst
docs_sphinx/usage/: usage.rst
docs_sphinx/usage comaprison/: usage comparison.rst
docs_sphinx/usage_comparison/: usage_comparison.rst
docs_sphinx/user/: units.rst
tests/: __init__.py  pytest.ini  test_units.py  test_utils.py  utils.py
unitSI/: __init__.py  _version.py  allunits.py  fundamentalunits.py
unitSI/tests/: test_units.py
utils/: __init__.py  caching.py  environment.py  logger.py
(+43 files in other folders)
