[project]
name = "unitSI"
authors = [
    {name = 'Sorin Birchi'},
]
requires-python = '>=3.10'
dependencies = [
    'numpy>=1.23.5',
    'sympy>=1.2',
    'setuptools>=61'
]
dynamic = ["version", "readme"]
description = 'unit system as used by the Brian2 simulator'
keywords = ['computational neuroscience', 'simulation', 'system units']
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Science/Research',
    'License :: GPL-3.0',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering :: Bio-Informatics'
]

[project.optional-dependencies]
test = ['pytest', 'pytest-xdist>=1.22.3']
docs = ['sphinx>=7', 'ipython>=5', 'sphinx-tabs']

[project.urls]
Documentation ='https://unitSI.readthedocs.io/en/latest/'
Source = 'https://github.com/brian-team/unitSI'
Tracker = 'https://github.com/brian-team/unitSI/issues'

[build-system]
requires = [
    "setuptools>=61",
    "numpy>=2.0.0rc1",
    "wheel",
    "setuptools_scm[toml]>=6.2"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["unitSI*"]

[tool.setuptools.dynamic]
readme = {file = 'README.md', content-type = "text/markdown"}

[tool.setuptools_scm]
version_scheme = 'post-release'
local_scheme = 'no-local-version'
write_to = 'unitSI/_version.py'
fallback_version = 'unknown'

[tool.black]
target-version = ['py310']
include = '^/unitSI/.*\.pyi?$'

[tool.isort]
atomic = true
profile = "black"
py_version = "311"
skip_gitignore = true
# NOTE: isort has no "include" option, only "skip".
skip_glob = ["docs_sphinx/*"]
